# ml-kernel-optimization

./: .gitignore  CMakeLists.txt  README.md
models/: tiny_mlp_state.pt
models/onnx/: tiny_mlp.onnx  tiny_mlp.onnx.data
python/compare/: export_test_input.py  run_onnxruntime.py
python/export/: export_tiny_mlp_onnx.py  export_tiny_mlp_weights.py  save_tiny_mlp_state.py
python/inspect/: inspect_onnx.py
python/models/: tiny_mlp.py
src/: main.c
src/naive/: dwconv_int8.c  dwconv_int8.h  fc_int8.c  fc_int8.h
src/optimized/: dwconv3x3_int8.c  dwconv3x3_int8.h  dwconv_int8_opt.c  dwconv_int8_opt.h  fc_int8_opt.c  fc_int8_opt.h
src/runtime/: runtime_mlp.c  runtime_mlp.h  tiny_mlp_weights.h
src/tests/: bench_dwconv.c  bench_dwconv3x3.c  bench_dwconv_opt.c  bench_fc.c  bench_fc_opt.c  test_dwconv.c  test_dwconv3x3.c  test_dwconv_opt.c  test_fc.c
